--- a/contactus.html
+++ b/contactus.html
@@ -140,13 +140,14 @@
 
   <!-- HEADER -->
   <header>
-    <h1>Minds Of Brands</h1>
+    <h1><a href="index.html">Minds Of Brands</a></h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="product.html">Product</a></li>
         <li><a href="about.html">About Us</a></li>
+        <li><a href="portfolio/index.html">Portfolio</a></li>
         <li><a href="contactus.html">Contact</a></li>
       </ul>
     </nav>
@@ -181,6 +182,7 @@
       <a href="services.html">Services</a> |
       <a href="product.html">Product</a> |
       <a href="about.html">About Us</a> |
+      <li><a href="portfolio/index.html">Portfolio</a></li> |
       <a href="contactus.html">Contact</a>
     </p>
   </footer>
