--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -139,16 +139,15 @@
 
   <!-- HEADER -->
   <header>
-    <h1>Minds Of Brands</h1>
+    <h1><a href="index.html">Minds Of Brands</a></h1>
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="../services.html">Services</a></li>
         <li><a href="../product.html">Product</a></li>
         <li><a href="../about.html">About Us</a></li>
-        <li><a href="../contactus.html">Contact</a></li>
         <li><a href="portfolio/index.html">Portfolio</a></li>
-
+        <li><a href="../contactus.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -214,7 +213,8 @@
       <a href="../services.html">Services</a> |
       <a href="../product.html">Product</a> |
       <a href="../about.html">About Us</a> |
-      <a href="../contact.html">Contact</a>
+      <li><a href="portfolio/index.html">Portfolio</a></li> |
+      <a href="../contactus.html">Contact</a>
     </p>
   </footer>
 
