--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
         <li><a href="services.html">Services</a></li>
         <li><a href="product.html">Product</a></li>
         <li><a href="about.html">About Us</a></li>
+        <li><a href="portfolio/index.html">Portfolio</a></li>
         <li><a href="contactus.html">Contact</a></li>
+        
       </ul>
     </nav>
   </header>
@@ -195,6 +197,7 @@
       <a href="services.html">Services</a> |
       <a href="product.html">Product</a> |
       <a href="about.html">About Us</a> |
+      <li><a href="portfolio/index.html">Portfolio</a></li> |
       <a href="contactus.html">Contact</a>
     </p>
   </footer>
