--- a/services.html
+++ b/services.html
@@ -222,7 +222,7 @@
       <a href="services.html">Services</a> |
       <a href="product.html">Product</a> |
       <a href="about.html">About Us</a> |
-      <li><a href="portfolio/index.html">Portfolio</a></li> |
+      <a href="portfolio/index.html">Portfolio</a> |
       <a href="contactus.html">Contact</a>
     </p>
   </footer>
