--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         <li><a href="product.html">Product</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="portfolio/index.html">Portfolio</a></li>
+        <a href="/portfolio/">Portfolio</a>
         <li><a href="contactus.html">Contact</a></li>
         
       </ul>
