--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 
   <!-- HEADER -->
   <header>
-    <h1><a href="index.html">Minds Of Brands</a></h1>
+    <h1><a href="/">Minds Of Brands</a></h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="product.html">Product</a></li>
         <li><a href="about.html">About Us</a></li>
