--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@
         <li><a href="services.html">Services</a></li>
         <li><a href="product.html">Product</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="portfolio/index.html">Portfolio</a></li>
         <li><a href="/portfolio/">Portfolio</a><li>
         <li><a href="contactus.html">Contact</a></li>
         
@@ -194,11 +193,11 @@
   <footer>
     <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
     <p>
-      <a href="index.html">Home</a> |
+      <a href="/">Home</a> |
       <a href="services.html">Services</a> |
       <a href="product.html">Product</a> |
       <a href="about.html">About Us</a> |
-      <a href="portfolio/index.html">Portfolio</a> |
+      <a href="portfolio/">Portfolio</a> |
       <a href="contactus.html">Contact</a>
     </p>
   </footer>
