--- a/services.html
+++ b/services.html
@@ -152,14 +152,14 @@
 
   <!-- HEADER -->
   <header>
-    <h1><a href="index.html">Minds Of Brands</a></h1>
+    <h1><a href="/">Minds Of Brands</a></h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="product.html">Product</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="portfolio/index.html">Portfolio</a></li>
+        <li><a href="portfolio/">Portfolio</a></li>
         <li><a href="contactus.html">Contact</a></li>
       </ul>
     </nav>
@@ -218,11 +218,11 @@
   <footer>
     <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
     <p>
-      <a href="index.html">Home</a> |
+      <a href="/">Home</a> |
       <a href="services.html">Services</a> |
       <a href="product.html">Product</a> |
       <a href="about.html">About Us</a> |
-      <a href="portfolio/index.html">Portfolio</a> |
+      <a href="portfolio/">Portfolio</a> |
       <a href="contactus.html">Contact</a>
     </p>
   </footer>
