--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
 
   <!-- HEADER -->
   <header>
-    <h1><a href="index.html">Minds Of Brands</a></h1>
+    <h1><a href="/">Minds Of Brands</a></h1>
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
