--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -139,14 +139,14 @@
 
   <!-- HEADER -->
   <header>
-    <h1><a href="index.html">Minds Of Brands</a></h1>
+    <h1><a href="/">Minds Of Brands</a></h1>
     <nav>
       <ul>
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="../services.html">Services</a></li>
         <li><a href="../product.html">Product</a></li>
         <li><a href="../about.html">About Us</a></li>
-        <li><a href="portfolio/index.html">Portfolio</a></li>
+        <li><a href="../portfolio/">Portfolio</a></li>
         <li><a href="../contactus.html">Contact</a></li>
       </ul>
     </nav>
@@ -209,11 +209,11 @@
   <footer>
     <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
     <p>
-      <a href="../index.html">Home</a> |
+      <a href="../">Home</a> |
       <a href="../services.html">Services</a> |
       <a href="../product.html">Product</a> |
       <a href="../about.html">About Us</a> |
-      <li><a href="portfolio/index.html">Portfolio</a></li> |
+      <li><a href="portfolio/">Portfolio</a></li> |
       <a href="../contactus.html">Contact</a>
     </p>
   </footer>
