--- a/product/index.html
+++ b/product/index.html
@@ -108,14 +108,34 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="product.html">Product</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="portfolio/">Portfolio</a></li>
-        <li><a href="contactus.html">Contact</a></li>
+        <li><a href="../services.html">Services</a></li>
+        <li><a href="../product/">Product</a></li>
+        <li><a href="../about.html">About Us</a></li>
+        <li><a href="../portfolio/">Portfolio</a></li>
+        <li><a href="../contactus.html">Contact</a></li>
       </ul>
     </nav>
   </header>
+
+
+  <!-- HEADER -->
+  <header>
+    <h1><a href="/">Minds Of Brands</a></h1>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="../services.html">Services</a></li>
+        <li><a href="../product.html">Product</a></li>
+        <li><a href="../about.html">About Us</a></li>
+        <li><a href="../portfolio/">Portfolio</a></li>
+        <li><a href="../contactus.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+
+  
 
   <!-- INTRO SECTION -->
   <div class="container intro">
@@ -196,5 +216,21 @@
     </p>
   </footer>
 
+
+  <!-- HEADER -->
+  <footer>
+    <h1><a href="/">Minds Of Brands</a></h1>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="../services.html">Services</a></li>
+        <li><a href="../product.html">Product</a></li>
+        <li><a href="../about.html">About Us</a></li>
+        <li><a href="../portfolio/">Portfolio</a></li>
+        <li><a href="../contactus.html">Contact</a></li>
+      </ul>
+    </nav>
+  </footer>
+  
 </body>
 </html>
