--- a/product/index.html
+++ b/product/index.html
@@ -102,7 +102,7 @@
 </head>
 <body>
 
-  <!-- HEADER -->
+   <!-- HEADER -->
   <header>
     <h1><a href="/">Minds Of Brands</a></h1>
     <nav>
@@ -116,26 +116,6 @@
       </ul>
     </nav>
   </header>
-
-
-  <!-- HEADER -->
-  <header>
-    <h1><a href="/">Minds Of Brands</a></h1>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="../services.html">Services</a></li>
-        <li><a href="../product.html">Product</a></li>
-        <li><a href="../about.html">About Us</a></li>
-        <li><a href="../portfolio/">Portfolio</a></li>
-        <li><a href="../contactus.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-
-
-  
 
   <!-- INTRO SECTION -->
   <div class="container intro">
@@ -207,13 +187,14 @@
   <footer>
     <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
     <p>
-      <a href="/">Home</a> |
-      <a href="services.html">Services</a> |
-      <a href="product.html">Product</a> |
-      <a href="about.html">About Us</a> |
-      <a href="portfolio/">Portfolio</a> |
-      <a href="contactus.html">Contact</a>
+      <a href="../">Home</a> |
+      <a href="../services.html">Services</a> |
+      <a href="../product/">Product</a> |
+      <a href="../about.html">About Us</a> |
+      <a href="..portfolio/">Portfolio</a> |
+      <a href="../contactus.html">Contact</a>
     </p>
-  </footer>  
+  </footer>
+
 </body>
 </html>
