--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -144,7 +144,7 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="../services.html">Services</a></li>
-        <li><a href="../product.html">Product</a></li>
+        <li><a href="../product/">Product</a></li>
         <li><a href="../about.html">About Us</a></li>
         <li><a href="../portfolio/">Portfolio</a></li>
         <li><a href="../contactus.html">Contact</a></li>
@@ -211,7 +211,7 @@
     <p>
       <a href="../">Home</a> |
       <a href="../services.html">Services</a> |
-      <a href="../product.html">Product</a> |
+      <a href="../product/">Product</a> |
       <a href="../about.html">About Us</a> |
       <a href="..portfolio/">Portfolio</a> |
       <a href="../contactus.html">Contact</a>
