--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -213,7 +213,7 @@
       <a href="../services.html">Services</a> |
       <a href="../product/">Product</a> |
       <a href="../about.html">About Us</a> |
-      <a href="..portfolio/">Portfolio</a> |
+      <a href="../portfolio/">Portfolio</a> |
       <a href="../contactus.html">Contact</a>
     </p>
   </footer>
