--- a/product/index.html
+++ b/product/index.html
@@ -92,11 +92,25 @@
     .btn:hover { transform: scale(1.1); }
 
     footer {
-      background: #111;
+      background: #000;
       color: #fff;
       text-align: center;
       padding: 20px;
-      margin-top: 50px;
+    }
+    footer p { font-size: 14px; }
+    footer a {
+      color: #0ff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    footer a:hover { text-decoration: underline; }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .hero h2 { font-size: 40px; }
+      .hero p { font-size: 18px; }
+      .section h2 { font-size: 30px; }
+      .products h2 { font-size: 30px; }
     }
   </style>
 </head>
