--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -147,7 +147,8 @@
         <li><a href="../product/">Product</a></li>
         <li><a href="../about.html">About Us</a></li>
         <li><a href="../portfolio/">Portfolio</a></li>
-        <li><a href="../contactus.html">Contact</a></li>
+        <li><a href="../blog">Blogs</a></li>
+        <li><a href="../contactus">Contact</a></li>
       </ul>
     </nav>
   </header>
