--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -111,17 +111,18 @@
 </head>
 <body>
 
-  <!-- HEADER -->
+ <!-- HEADER -->
   <header>
     <h1><a href="/">Minds Of Brands</a></h1>
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="product/">Product</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="portfolio/">Portfolio</a></li>
-        <li><a href="contactus.html">Contact</a></li>
+        <li><a href="../services.html">Services</a></li>
+        <li><a href="../product/">Product</a></li>
+        <li><a href="../about.html">About Us</a></li>
+        <li><a href="../portfolio/">Portfolio</a></li>
+        <li><a href="../blog">Blogs</a></li>
+        <li><a href="../contactus">Contact</a></li>
       </ul>
     </nav>
   </header>
