--- a/services.html
+++ b/services.html
@@ -156,7 +156,7 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="../services.html">Services</a></li>
+        <li><a href="../services">Services</a></li>
         <li><a href="../product/">Product</a></li>
         <li><a href="../about.html">About Us</a></li>
         <li><a href="../portfolio/">Portfolio</a></li>
@@ -219,12 +219,13 @@
   <footer>
     <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
     <p>
-      <a href="/">Home</a> |
-      <a href="services.html">Services</a> |
-      <a href="product/">Product</a> |
-      <a href="about.html">About Us</a> |
-      <a href="portfolio/">Portfolio</a> |
-      <a href="contactus.html">Contact</a>
+      <a href="../">Home</a> |
+      <a href="../services">Services</a> |
+      <a href="../product/">Product</a> |
+      <a href="../about.html">About Us</a> |
+      <a href="../portfolio/">Portfolio</a> |
+      <li><a href="../blog">Blogs</a></li> |
+      <a href="../contactus">Contact</a>
     </p>
   </footer>
 
