--- a/index.html
+++ b/index.html
@@ -152,11 +152,12 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li><a href="services">Services</a></li>
         <li><a href="product/">Product</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="/portfolio/">Portfolio</a><li>
-        <li><a href="contactus.html">Contact</a></li>
+        <li><a href="../blog">Blogs</a></li>
+        <li><a href="contactus">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -193,11 +194,12 @@
     <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
     <p>
       <a href="/">Home</a> |
-      <a href="services.html">Services</a> |
+      <a href="services">Services</a> |
       <a href="product/">Product</a> |
       <a href="about.html">About Us</a> |
       <a href="portfolio/">Portfolio</a> |
-      <a href="contactus.html">Contact</a>
+      <a href="../blog">Blogs</a> |
+      <a href="contactus">Contact</a>
     </p>
   </footer>
 
