--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -166,7 +166,7 @@
       <a href="../product/">Product</a> |
       <a href="../about.html">About Us</a> |
       <a href="../portfolio/">Portfolio</a> |
-      <li><a href="../blog">Blogs</a></li> |
+      <a href="../blog">Blogs</a> |
       <a href="../contactus">Contact</a>
     </p>
   </footer>
