--- a/services.html
+++ b/services.html
@@ -160,7 +160,7 @@
         <li><a href="../product/">Product</a></li>
         <li><a href="../about.html">About Us</a></li>
         <li><a href="../portfolio/">Portfolio</a></li>
-        <li><a href="../blog">Blogs</a></li>
+        <a href="../blog">Blogs</a>
         <li><a href="../contactus">Contact</a></li>
       </ul>
     </nav>
