--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,173 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us - Minds Of Brands</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Learn more about Minds Of Brands, our mission, vision, expertise, and the industries we serve.">
+  <meta name="keywords" content="About Minds Of Brands, Digital Marketing, SEO, SMM, Lead Generation, Branding">
+  <meta name="author" content="Minds Of Brands">
+
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      color: #fff;
+      background-color: #000;
+    }
+
+    /* Header */
+    header {
+      background: #000;
+      color: #fff;
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+    header h1 {
+      font-size: 24px;
+      font-weight: bold;
+      background: linear-gradient(90deg, #00f, #0ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    nav ul { list-style: none; display: flex; }
+    nav ul li { margin-left: 20px; }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+    nav ul li a:hover { color: #0ff; }
+
+    /* Main container */
+    .container {
+      max-width: 1000px;
+      margin: 60px auto;
+      padding: 40px 20px;
+    }
+
+    /* Headings */
+    h2 {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 36px;
+      background: linear-gradient(90deg, #00f, #0ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    h3 {
+      font-size: 28px;
+      margin-bottom: 15px;
+      background: linear-gradient(90deg, #00f, #0ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    p {
+      font-size: 16px;
+      color: #fff;
+      margin-bottom: 20px;
+    }
+
+    .section {
+      margin-bottom: 60px;
+      padding: 20px;
+      background-color: #111;
+      border-radius: 10px;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.5);
+    }
+
+    footer {
+      background: #000;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+    footer p { font-size: 14px; }
+    footer a {
+      color: #0ff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    footer a:hover { text-decoration: underline; }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      h2 { font-size: 28px; }
+      h3 { font-size: 22px; }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- HEADER -->
+  <header>
+    <h1><a href="/">Minds Of Brands</a></h1>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="product/">Product</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="portfolio/">Portfolio</a></li>
+        <li><a href="contactus.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- COMPANY OVERVIEW -->
+  <div class="container section">
+    <h2>About Minds Of Brands</h2>
+    <p>
+      Minds Of Brands is a full-service digital marketing and branding agency dedicated to helping businesses grow in the digital landscape. 
+      With over 10 years of experience, we have worked across diverse industries including Retail, Electronics & Home Appliances, Media Production, Finance, Software, and Hardware like Aluminium products.
+      Our mission is to deliver data-driven marketing solutions, innovative strategies, and measurable results for our clients.
+    </p>
+  </div>
+
+  <!-- OUR EXPERTS -->
+  <div class="container section">
+    <h3>Our Team of Experts</h3>
+    <p>
+      We are a team of passionate digital marketing professionals, strategists, and creative thinkers who combine technology, analytics, and design to boost brands in the digital territories. 
+      Our experts work collaboratively to craft campaigns that drive engagement, leads, and business growth.
+    </p>
+  </div>
+
+  <!-- CORE VALUES / WHY CHOOSE US -->
+  <div class="container section">
+    <h3>Why Choose Us?</h3>
+    <p>
+      At Minds Of Brands, we are committed to providing transparent, results-oriented, and cost-effective solutions. 
+      We focus on understanding your business, delivering creative campaigns, and ensuring measurable growth. 
+      Our dedication, experience, and data-driven approach make us a trusted partner for brands across multiple industries.
+    </p>
+  </div>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
+    <p>
+      <a href="/">Home</a> |
+      <a href="services.html">Services</a> |
+      <a href="product/">Product</a> |
+      <a href="about.html">About Us</a> |
+      <a href="portfolio/">Portfolio</a> |
+      <a href="contactus.html">Contact</a>
+    </p>
+  </footer>
+
+</body>
+</html>
 
