--- a/contactus/index.html
+++ b/contactus/index.html
@@ -184,11 +184,10 @@
       <a href="../product/">Product</a> |
       <a href="../about.html">About Us</a> |
       <a href="../portfolio/">Portfolio</a> |
-      <li><a href="../blog">Blogs</a></li> |
+      <a href="../blog">Blogs</a> |
       <a href="../contactus">Contact</a>
     </p>
   </footer>
-
-
+  
 </body>
 </html>
