--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -137,21 +137,22 @@
 </head>
 <body>
 
-  <!-- HEADER -->
+ <!-- HEADER -->
   <header>
     <h1><a href="/">Minds Of Brands</a></h1>
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="../services">Services</a></li>
+        <li><a href="../services/">Services</a></li>
         <li><a href="../product/">Product</a></li>
-        <li><a href="../about.html">About Us</a></li>
+        <li><a href="../about/">About Us</a></li>
         <li><a href="../portfolio/">Portfolio</a></li>
-        <li><a href="../blog">Blogs</a></li>
-        <li><a href="../contactus">Contact</a></li>
+        <li><a href="../blog/">Blogs</a></li>
+        <li><a href="../contactus/">Contact</a></li>
       </ul>
     </nav>
   </header>
+
 
   <!-- Portfolio Intro -->
   <div class="container section">
@@ -210,15 +211,15 @@
   <footer>
     <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
     <p>
-      <a href="../">Home</a> |
-      <a href="../services">Services</a> |
-      <a href="../product/">Product</a> |
-      <a href="../about.html">About Us</a> |
-      <a href="../portfolio/">Portfolio</a> |
-      <a href="../blog">Blogs</a> |
-      <a href="../contactus">Contact</a>
+      <a href="/">Home</a> |
+      <a href="services/">Services</a> |
+      <a href="product/">Product</a> |
+      <a href="about/">About Us</a> |
+      <a href="portfolio/">Portfolio</a> |
+      <a href="../blog/">Blogs</a> |
+      <a href="../contactus/">Contact</a>
     </p>
   </footer>
-  
+
 </body>
 </html>
