--- a/product/index.html
+++ b/product/index.html
@@ -122,11 +122,12 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="../services.html">Services</a></li>
+        <li><a href="../services/">Services</a></li>
         <li><a href="../product/">Product</a></li>
-        <li><a href="../about.html">About Us</a></li>
+        <li><a href="../about/">About Us</a></li>
         <li><a href="../portfolio/">Portfolio</a></li>
-        <li><a href="../contactus.html">Contact</a></li>
+        <li><a href="../blog/">Blogs</a></li>
+        <li><a href="../contactus/">Contact</a></li>
       </ul>
     </nav>
   </header>
