--- a/product/index.html
+++ b/product/index.html
@@ -198,16 +198,17 @@
     <a href="YOUR_ZOHO_AFFILIATE_LINK" class="btn" target="_blank">Explore Zoho Apps</a>
   </div>
   
-  <!-- FOOTER -->
+ <!-- FOOTER -->
   <footer>
     <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
     <p>
-      <a href="../">Home</a> |
-      <a href="../services.html">Services</a> |
-      <a href="../product/">Product</a> |
-      <a href="../about.html">About Us</a> |
-      <a href="../portfolio/">Portfolio</a> |
-      <a href="../contactus.html">Contact</a>
+      <a href="/">Home</a> |
+      <a href="services/">Services</a> |
+      <a href="product/">Product</a> |
+      <a href="about/">About Us</a> |
+      <a href="portfolio/">Portfolio</a> |
+      <a href="../blog/">Blogs</a> |
+      <a href="../contactus/">Contact</a>
     </p>
   </footer>
 
