--- a/about/index.html
+++ b/about/index.html
@@ -162,10 +162,10 @@
     <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
     <p>
       <a href="/">Home</a> |
-      <a href="services/">Services</a> |
-      <a href="product/">Product</a> |
-      <a href="about/">About Us</a> |
-      <a href="portfolio/">Portfolio</a> |
+      <a href="../services/">Services</a> |
+      <a href="../product/">Product</a> |
+      <a href="../about/">About Us</a> |
+      <a href="../portfolio/">Portfolio</a> |
       <a href="../blog/">Blogs</a> |
       <a href="../contactus/">Contact</a>
     </p>
