--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   <section class="hero">
     <h2>Boosting Brands in the Digital Territories</h2>
     <p>SEO | Social Media | Lead Generation | Branding | CRM</p>
-    <a href="contactus.html" class="btn">Contact Us</a>
+    <a href="../contactus/" class="btn">Contact Us</a>
   </section>
 
   <!-- ABOUT SECTION -->
