--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <section class="products">
     <h2>Our Products</h2>
     <p>Maina is our upcoming application designed to help businesses manage digital marketing workflows efficiently. You can learn more or download the app in the future updates. For now, you can contact us to get early access.</p>
-    <a href="contactus.html" class="btn">Contact Us / Download App</a>
+    <a href="../contactus/" class="btn">Contact Us / Download App</a>
   </section>
 
   <!-- FOOTER -->
