--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <section class="products">
     <h2>Our Products</h2>
     <p>Maina is our upcoming application designed to help businesses manage digital marketing workflows efficiently. You can learn more or download the app in future updates. For now, you can contact us to get early access and explore our range of digital marketing products and solutions designed to boost your online growth.</p>
-    <a href="../product/" class="btn">Browse our Products</a>
+    <a href="../product/" class="btn">Explore Products</a>
   </section>
 
   <!-- FOOTER -->
