--- a/services/index.html
+++ b/services/index.html
@@ -211,7 +211,7 @@
     <div class="product-cta">
       <h3>Check Out Our Products</h3>
       <p>Discover our product offerings including the Maina app. Learn more or download by visiting our product page.</p>
-      <a href="product.html">Explore Products</a>
+      <a href="../product/">Explore Products</a>
     </div>
   </div>
 
