--- a/product/index.html
+++ b/product/index.html
@@ -159,7 +159,7 @@
   <p>Enjoy a seamless shopping experience and benefit from exclusive offers.</p>
   <p>🎉 Check out Amazon now and grab a surprise reward!</p>
 
-  <a href="#" class="btn" target="_blank">Explore on Amazon</a>
+  <a href="https://amzn.to/4n67Hm0/" class="btn" target="_blank">Explore on Amazon</a>
 </div>
 
 <!-- PRODUCT SECTION : ZOHO -->
