--- a/product/index.html
+++ b/product/index.html
@@ -171,7 +171,7 @@
   <p>Boost efficiency, improve customer relationships, and scale your business effortlessly.</p>
   <p>✨ Explore Zoho and receive a special cashback upon successful request!</p>
 
-  <a href="#" class="btn" target="_blank">Explore Zoho Apps</a>
+  <a href="https://go.zoho.com/mex" class="btn" target="_blank">Explore Zoho Apps</a>
 </div>
 
 <!-- PRODUCT SECTION : NINJA PROMO -->
@@ -195,7 +195,7 @@
   <p>Reliable, easy-to-use, and backed by trusted brands globally.</p>
   <p>💡 Explore Healthy Master and enjoy a special gift reward for early engagement!</p>
 
-  <a href="#" class="btn" target="_blank">Check Healthy Master</a>
+  <a href="https://healthymaster.in/?ref=nkzsorwy" class="btn" target="_blank">Check Healthy Master</a>
 </div>
 
 <!-- FOOTER -->
