--- a/product/index.html
+++ b/product/index.html
@@ -147,7 +147,7 @@
   <p>The app is lightweight, fast, and optimized for most Android devices.</p>
   <p>Stay on top of your schedule, improve productivity, and manage your life smarter.</p>
 
-  <a href="contact.html" class="btn">Coming Soon - Request Access</a>
+  <a href="../contact/" class="btn">Coming Soon - Request Access</a>
 </div>
 
 <!-- PRODUCT SECTION : AMAZON -->
@@ -171,10 +171,10 @@
   <p>Boost efficiency, improve customer relationships, and scale your business effortlessly.</p>
   <p>✨ Explore Zoho and receive a special cashback upon successful request!</p>
 
-  <a href="https://go.zoho.com/mex" class="btn" target="_blank">Explore Zoho Apps</a>
+  <a href="https://go.zoho.com/mex/" class="btn" target="_blank">Explore Zoho Apps</a>
 </div>
 
-<!-- PRODUCT SECTION : NINJA PROMO -->
+<!-- PRODUCT SECTION : NINJA PROMO 
 <div class="container product-section">
   <img src="https://via.placeholder.com/400x400.png?text=Ninja+Promo" alt="Ninja Promo" class="product-img">
   
@@ -184,7 +184,7 @@
   <p>🎁 Check Ninja Promo now and claim your surprise gift reward!</p>
 
   <a href="#" class="btn" target="_blank">Visit Ninja Promo</a>
-</div>
+</div> -->
 
 <!-- PRODUCT SECTION : HEALTHY MASTER -->
 <div class="container product-section">
@@ -195,7 +195,7 @@
   <p>Reliable, easy-to-use, and backed by trusted brands globally.</p>
   <p>💡 Explore Healthy Master and enjoy a special gift reward for early engagement!</p>
 
-  <a href="https://healthymaster.in/?ref=nkzsorwy" class="btn" target="_blank">Check Healthy Master</a>
+  <a href="https://healthymaster.in/?ref=nkzsorwy/" class="btn" target="_blank">Check Healthy Master</a>
 </div>
 
 <!-- FOOTER -->
