--- a/product/index.html
+++ b/product/index.html
@@ -40,7 +40,7 @@
       font-weight: bold;
       transition: color 0.3s ease;
     }
-    nav ul li a:hover { color: #f4b400; }
+    nav ul li a:hover { color: #0ff; }
 
     .container {
       max-width: 1000px;
