--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Minds Of Brands | Digital Marketing & Branding</title>
 
+  <link rel="icon" type="image/png" href="https://mindsofbrands.com/assets/images/MindsOfBrandsLogo.png">
+
   <!-- SEO Meta Tags -->
   <meta name="description" content="Minds Of Brands helps businesses grow with SEO, Social Media Marketing, Lead Generation, and Branding solutions.">
   <meta name="keywords" content="Digital Marketing, SEO, Social Media Marketing, Lead Generation, Branding, Minds Of Brands">
