--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -163,11 +163,11 @@
 
   <!-- Business 1 -->
   <div class="container section">
-    <h3>TechNova Solutions</h3>
+    <h3>BeatXp</h3>
     <p>
-      TechNova Solutions is a leading IT and software development company, delivering innovative digital solutions for businesses of all sizes. From custom software applications to web and mobile development, TechNova ensures seamless technology integration. Our collaboration focused on responsive websites, enhanced UX/UI, and lead generation campaigns. Results included increased visibility, higher conversions, and stronger client trust.
+      BeatXP is a leading Indian smartwatch and fitness tech brand known for its feature-rich, affordable wearables. The company wanted to scale the sales of specific smartwatch models while strengthening its online visibility and customer engagement through digital marketing efforts.
     </p>
-    <a href="https://technova.com" class="visit-btn" target="_blank">Visit Website</a>
+    <a href="https://technova.com" class="visit-btn" target="_blank">Learn More</a>
     <div class="gallery">
       <img src="https://via.placeholder.com/400x300?text=TechNova+1" alt="TechNova Image 1">
       <img src="https://via.placeholder.com/400x300?text=TechNova+2" alt="TechNova Image 2">
