--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -100,16 +100,19 @@
 <body>
 
   <header>
-    <a class="brand" href="/">Minds Of Brands</a>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/services/">Services</a></li>
-        <li><a href="/portfolio/">Portfolio</a></li>
-        <li><a href="/contactus/">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1><a href="/">Minds Of Brands</a></h1>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/services/">Services</a></li>
+      <li><a href="/product/">Product</a></li>
+      <li><a href="/about/">About Us</a></li>
+      <li><a href="/portfolio/">Portfolio</a></li>
+      <li><a href="/blog/">Blogs</a></li>
+      <li><a href="/contactus/">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
   <main class="container">
 
@@ -275,10 +278,19 @@
 
   </main>
 
+  <!-- FOOTER -->
   <footer>
-    © 2025 Minds Of Brands — Boosting Brands in the digital territories • <a href="/contactus/" style="color:var(--accent2);text-decoration:none">Contact</a>
+    <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
+    <p>
+      <a href="/">Home</a> |
+      <a href="../services/">Services</a> |
+      <a href="../product/">Product</a> |
+      <a href="../about/">About Us</a> |
+      <a href="../portfolio/">Portfolio</a> |
+      <a href="../blog/">Blogs</a> |
+      <a href="../contactus/">Contact</a>
+    </p>
   </footer>
-
+  
 </body>
 </html>
-
