--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -167,7 +167,7 @@
     <p>
       BeatXP is a leading Indian smartwatch and fitness tech brand known for its feature-rich, affordable wearables. The company wanted to scale the sales of specific smartwatch models while strengthening its online visibility and customer engagement through digital marketing efforts.
     </p>
-    <a href="https://technova.com" class="visit-btn" target="_blank">Learn More</a>
+    <a href="https://mindsofbrands.com/portfolio/beatxp/" class="visit-btn" target="_blank">Learn More</a>
     <div class="gallery">
       <img src="https://via.placeholder.com/400x300?text=TechNova+1" alt="TechNova Image 1">
       <img src="https://via.placeholder.com/400x300?text=TechNova+2" alt="TechNova Image 2">
