--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -99,21 +99,26 @@
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header>
-    <h1><a href="/">Minds Of Brands</a></h1>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/services/">Services</a></li>
-        <li><a href="/product/">Product</a></li>
-        <li><a href="/about/">About Us</a></li>
-        <li><a href="/portfolio/">Portfolio</a></li>
-        <li><a href="/blog/">Blogs</a></li>
-        <li><a href="/contactus/">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+ <header>
+  <a class="brand" href="/">
+    <span style="font-weight:700; font-size:20px;
+                 background: linear-gradient(90deg, #00f, #0ff);
+                 -webkit-background-clip: text;
+                 -webkit-text-fill-color: transparent;">
+      Minds Of Brands
+    </span>
+  </a>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about/">About</a></li>
+      <li><a href="/services/">Services</a></li>
+      <li><a href="/portfolio/">Portfolio</a></li>
+      <li><a href="/contactus/">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <main class="container">
 
