--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -100,16 +100,20 @@
 <body>
 
   <header>
-    <a class="brand" href="/">Minds Of Brands</a>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/services/">Services</a></li>
-        <li><a href="/portfolio/">Portfolio</a></li>
-        <li><a href="/contactus/">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1><a href="/">Minds Of Brands</a></h1>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/services/">Services</a></li>
+      <li><a href="/product/">Product</a></li>
+      <li><a href="/about/">About Us</a></li>
+      <li><a href="/portfolio/">Portfolio</a></li>
+      <li><a href="/blog/">Blogs</a></li>
+      <li><a href="/contactus/">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <main class="container">
 
