--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -100,7 +100,18 @@
 <body>
 
   <header>
-  <h1><a href="/">Minds Of Brands</a></h1>
+  <h1>
+    <a href="/" style="
+      font-size: 24px;
+      font-weight: bold;
+      background: linear-gradient(90deg, #00f, #0ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-decoration: none;
+    ">
+      Minds Of Brands
+    </a>
+  </h1>
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
