--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -290,8 +290,18 @@
 
   </main>
 
+  <!-- FOOTER -->
   <footer>
-    © 2025 Minds Of Brands — Boosting Brands in the digital territories • <a href="/contactus/" style="color:var(--accent2);text-decoration:none">Contact</a>
+    <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
+    <p>
+      <a href="/">Home</a> |
+      <a href="../services/">Services</a> |
+      <a href="../product/">Product</a> |
+      <a href="../about/">About Us</a> |
+      <a href="../portfolio/">Portfolio</a> |
+      <a href="../blog/">Blogs</a> |
+      <a href="../contactus/">Contact</a>
+    </p>
   </footer>
 
 </body>
