--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -103,7 +103,7 @@
   <h1>
     <a href="/" style="
       font-size: 24px;
-      font-weight: bold;
+      font-weight: 700;
       background: linear-gradient(90deg, #00f, #0ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
