--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -40,7 +40,7 @@
       padding:14px 32px;display:flex;align-items:center;justify-content:space-between;
       border-bottom:1px solid rgba(255,255,255,0.03)
     }
-    header .brand{font-size:20px;font-weight:700;text-decoration:none;background:linear-gradient(90deg,var(--accent1),var(--accent2));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+    header .brand{font-size:24px;font-weight:700;text-decoration:none;background:linear-gradient(90deg,var(--accent1),var(--accent2));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
     nav ul{display:flex;list-style:none;gap:18px;align-items:center}
     nav a{color:#fff;text-decoration:none;font-weight:600}
     nav a:hover{color:var(--accent2)}
@@ -103,7 +103,7 @@
   <h1>
     <a href="/" style="
       font-size: 24px;
-      font-weight: 700;
+      font-weight: bold;
       background: linear-gradient(90deg, #00f, #0ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
