--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -94,7 +94,27 @@
     .project-cta .text{color:var(--muted)}
     .small{font-size:13px;color:var(--muted)}
 
-    footer{padding:40px 24px;text-align:center;color:var(--muted);font-size:14px;margin-top:40px}
+    /* Footer */
+    footer {
+      background: #000;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+    footer p { font-size: 14px; }
+    footer a {
+      color: #0ff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    footer a:hover { text-decoration: underline; }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      h2 { font-size: 28px; }
+      h3 { font-size: 22px; }
+    }
   </style>
 </head>
 <body>
